--- a/components/camel-paypal/pom.xml
+++ b/components/camel-paypal/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>camel-paypal</artifactId>
     <packaging>bundle</packaging>
-    <name>Camel Paypal Component</name>
+    <name>Camel :: Paypal</name>
     <description>Camel Component for Paypal</description>
     
     <properties>
@@ -33,11 +33,6 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>2.14-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.component.paypal</groupId>
-            <artifactId>camel-paypal-api</artifactId>
             <version>2.14-SNAPSHOT</version>
         </dependency>
 
@@ -80,14 +75,6 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test</artifactId>
             <version>2.14-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- include component API javadoc in test scope to read API signatures -->
-        <dependency>
-            <groupId>org.apache.camel.component.paypal</groupId>
-            <artifactId>camel-paypal-api</artifactId>
-            <version>2.14-SNAPSHOT</version>
-            <classifier>javadoc</classifier>
             <scope>test</scope>
         </dependency>
 
